--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,6 @@
 # should be updated accordingly.
 
 # Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+GITHUB_ACCESS_TOKEN="gh-token"
+NEXT_PUBLIC_REPO_OWNER="your-github-username"
+NEXT_PUBLIC_REPO_NAME="your-repo"
