--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
+    "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "superjson": "1.12.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
